Fixing regression bug 256938. Parser hang. Patch by robin.lu@sun.com, r+sr=jst@mozilla.org